lints.workspace = true

[package]
name = "nativelink-error"
version = "0.6.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
nativelink-proto = { path = "../nativelink-proto" }
nativelink-metric = { path = "../nativelink-metric" }
fred = { version = "10.1.0", default-features = false, features = [
  "enable-rustls-ring",
] }
hex = { version = "0.4.3", default-features = false }
prost = { version = "0.13.5", default-features = false }
prost-types = { version = "0.13.5", default-features = false }
serde = { version = "1.0.219", default-features = false }
tokio = { version = "1.44.1", features = ["fs", "rt-multi-thread", "signal", "io-util"], default-features = false }
tonic = { version = "0.13.0", features = ["transport", "tls-ring"], default-features = false }
