#:schema ../tools/cargo-with-detailed-deps.json
lints.workspace = true

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
edition = "2024"
name = "nativelink-error"
version = "0.8.0"

[dependencies]
nativelink-metric = { path = "../nativelink-metric" }
nativelink-proto = { path = "../nativelink-proto" }

prost = { version = "0.13.5", default-features = false }
prost-types = { version = "0.13.5", default-features = false }
redis = { version = "1.0.0", default-features = false }
rustls-pki-types = { version = "1.13.1", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json5 = { version = "0.2.1", default-features = false }
tokio = { version = "1.44.1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "signal",
], default-features = false }
tonic = { version = "0.13.0", features = [
  "tls-ring",
  "transport",
], default-features = false }
uuid = { version = "1.16.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
