#:schema ../tools/cargo-with-detailed-deps.json
lints.workspace = true

[package]
autobenches = false
autobins = false
autoexamples = false
edition = "2024"
name = "nativelink-error"
version = "1.0.0"

[dependencies]
nativelink-metric = { path = "../nativelink-metric" }
nativelink-proto = { path = "../nativelink-proto" }

mongodb = { version = "3", features = [
  "compat-3-0-0",
  "rustls-tls",
], default-features = false }
prost = { version = "0.13.5", default-features = false }
prost-types = { version = "0.13.5", default-features = false, features = [
  "std",
] }
redis = { version = "1.0.0", default-features = false }
reqwest = { version = "0.12", default-features = false }
rustls-pki-types = { version = "1.13.1", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json5 = { version = "0.2.1", default-features = false }
tokio = { version = "1.52.2", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "signal",
], default-features = false }
tonic = { version = "0.13.0", features = [
  "tls-ring",
  "transport",
], default-features = false }
url = { version = "2.5.7", default-features = false }
uuid = { version = "1.16.0", default-features = false, features = ["std"] }
walkdir = { version = "2.5.0", default-features = false }
zip = { version = "7.2.0", default-features = false }
