load(
    "@rules_rust//rust:defs.bzl",
    "rust_doc",
    "rust_proc_macro",
)

rust_proc_macro(
    name = "nativelink-macro",
    srcs = [
        "src/lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:proc-macro2",
        "@crates//:quote",
        "@crates//:syn",
    ],
)

rust_doc(
    name = "docs",
    crate = ":nativelink-macro",
)
