#:schema ../tools/cargo-with-detailed-deps.json
lints.workspace = true

[package]
edition = "2024"
name = "nativelink-macro"
version = "1.6.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.94", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "3.0.0", default-features = false, features = [
  "full",
  "parsing",
  "printing",
  "proc-macro",
] }
