load(
    "@rules_rust//rust:defs.bzl",
    "rust_doc",
    "rust_doc_test",
    "rust_library",
)

rust_library(
    name = "nativelink-metric",
    srcs = [
        "src/lib.rs",
    ],
    visibility = ["//visibility:public"],
    proc_macro_deps = [
        "//nativelink-metric/nativelink-metric-macro-derive",
    ],
    deps = [
        "@crates//:tracing",
        "@crates//:tokio",
        "@crates//:async-lock",
        "@crates//:parking_lot",
    ],
)

rust_doc(
    name = "docs",
    crate = ":nativelink-metric",
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    timeout = "short",
    crate = ":nativelink-metric",
)
