[package]
name = "nativelink-metric"
version = "0.5.3"
edition = "2021"

[dependencies]
nativelink-metric-macro-derive = { path = "nativelink-metric-macro-derive" }
async-lock = { version = "3.4.0", features = ["std"], default-features = false }
parking_lot = "0.12.3"
tracing = { version = "0.1.41", default-features = false }
tokio = { version = "1.42.0", features = ["fs", "rt-multi-thread", "signal", "io-util"], default-features = false }
