lints.workspace = true

[package]
edition = "2024"
name = "nativelink-metric"
version = "0.7.0-rc.1"

[dependencies]
nativelink-metric-macro-derive = { path = "nativelink-metric-macro-derive" }

async-lock = { version = "3.4.0", features = ["std"], default-features = false }
parking_lot = "0.12.3"
tokio = { version = "1.44.1", features = [
  "fs",
  "io-util",
  "rt-multi-thread",
  "signal",
], default-features = false }
tracing = { version = "0.1.41", default-features = false }
