[package]
name = "nativelink-proto"
version = "0.7.3"
edition = "2024"

[lib]
name = "nativelink_proto"
path = "genproto/lib.rs"

[dependencies]
derive_more = { version="2.0.1", default-features = false, features=["debug"] }
prost = { version = "0.13.5", default-features = false }
prost-types = { version = "0.13.5", default-features = false }
tonic = { version = "0.13.0", features = ["codegen", "prost", "transport", "tls-ring"], default-features = false }

[dev-dependencies]
prost-build = { version = "0.13.5", default-features = false }
tonic-build = { version = "0.13.0", features = ["prost"], default-features = false }

[package.metadata.cargo-machete]
# Used by gen_protos_tool.rs
ignored = ["prost-build", "tonic-build"]
